# airbyte-python-cdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cdk-migrations.md  mypy.ini  package-lock.json  pyproject.toml  ruff.toml
.github/: dependabot.yml  release-drafter.yml  release_drafter.yml
.github/workflows/: autofix-command.yml  cdk-publish.yml  connector-tests.yml  docker-build-check.yml  fix-pr-command.yml  pdoc_preview.yml  pdoc_publish.yml  poetry-lock-command.yml  publish_sdm_connector.yml  pydoc_preview.yml  pydoc_publish.yml  pypi_publish.yml  pytest_fast.yml  pytest_matrix.yml  python_lint.yml  python_pytest.yml  release_drafter.yml  semantic_pr_check.yml  slash_command_dispatch.yml  test-command.yml  test-pr-command.yml
airbyte_cdk/: __init__.py  config_observation.py  connector.py  entrypoint.py  logger.py
airbyte_cdk/cli/source_declarative_manifest/: __init__.py  _run.py
airbyte_cdk/connector_builder/: connector_builder_handler.py  main.py  message_grouper.py
airbyte_cdk/connector_builder/test_reader/: helpers.py  message_grouper.py  reader.py  types.py
airbyte_cdk/destinations/: destination.py
airbyte_cdk/destinations/vector_db_based/: config.py  document_processor.py  embedder.py  writer.py
airbyte_cdk/models/: __init__.py  airbyte_protocol.py  airbyte_protocol_serializers.py
airbyte_cdk/sources/: abstract_source.py  config.py  connector_state_manager.py  http_logger.py  types.py
airbyte_cdk/sources/concurrent_source/: concurrent_read_processor.py  concurrent_source.py
airbyte_cdk/sources/declarative/: concurrent_declarative_source.py  declarative_component_schema.yaml  declarative_source.py  declarative_stream.py  manifest_declarative_source.py  yaml_declarative_source.py
airbyte_cdk/sources/declarative/async_job/: job.py  job_orchestrator.py  job_tracker.py
airbyte_cdk/sources/declarative/auth/: jwt.py  oauth.py  selective_authenticator.py  token.py  token_provider.py
airbyte_cdk/sources/declarative/checks/: __init__.py  check_dynamic_stream.py  check_stream.py  connection_checker.py
airbyte_cdk/sources/declarative/datetime/: datetime_parser.py  min_max_datetime.py
airbyte_cdk/sources/declarative/decoders/: __init__.py  composite_raw_decoder.py  decoder.py  json_decoder.py  noop_decoder.py  pagination_decoder_decorator.py  xml_decoder.py  zipfile_decoder.py
airbyte_cdk/sources/declarative/extractors/: __init__.py  dpath_enhancing_extractor.py  dpath_extractor.py  record_extractor.py  record_filter.py  record_selector.py  response_to_file_extractor.py
airbyte_cdk/sources/declarative/incremental/: __init__.py  concurrent_partition_cursor.py  datetime_based_cursor.py  global_substream_cursor.py  per_partition_cursor.py  per_partition_with_global.py  resumable_full_refresh_cursor.py
airbyte_cdk/sources/declarative/interpolation/: jinja.py  (+7 more)
airbyte_cdk/sources/embedded/: base_integration.py  catalog.py  runner.py  tools.py
airbyte_cdk/sources/file_based/: exceptions.py  file_based_source.py  file_based_stream_reader.py  schema_helpers.py
airbyte_cdk/sources/message/: repository.py
airbyte_cdk/sources/streams/: availability_strategy.py  call_rate.py  core.py
airbyte_cdk/sources/utils/: record_helper.py  schema_helpers.py  slice_logger.py  transform.py
airbyte_cdk/sql/: secrets.py
airbyte_cdk/sql/shared/: catalog_providers.py  sql_processor.py
airbyte_cdk/test/: catalog_builder.py  entrypoint_wrapper.py
airbyte_cdk/test/mock_http/: mocker.py  response.py  response_builder.py
airbyte_cdk/test/utils/: manifest_only_fixtures.py
airbyte_cdk/utils/: airbyte_secrets_utils.py  datetime_helpers.py  mapping_helpers.py  message_utils.py  schema_inferrer.py  slice_hasher.py  spec_schema_transformations.py  traced_exception.py
docs/: CONTRIBUTING.md  CONTRIBUTING.md.orig  RELEASES.md  generate.py
reference_docs/: generate_rst_schema.py
unit_tests/: conftest.py  test_config_observation.py  test_connector.py  test_counter.py  test_entrypoint.py  test_exception_handler.py  test_logger.py  test_secure_logger.py
unit_tests/connector_builder/: test_connector_builder_handler.py  test_message_grouper.py
unit_tests/destinations/: test_destination.py
unit_tests/destinations/vector_db_based/: config_test.py  document_processor_test.py  embedder_test.py  writer_test.py
unit_tests/source_declarative_manifest/: conftest.py  test_source_declarative_local_manifest.py  test_source_declarative_remote_manifest.py  test_source_declarative_w_custom_components.py
unit_tests/sources/: conftest.py  test_abstract_source.py  test_config.py  test_connector_state_manager.py  test_http_logger.py  test_integration_source.py  test_source.py  test_source_read.py
unit_tests/sources/concurrent_source/: test_concurrent_source_adapter.py
unit_tests/sources/declarative/: custom_state_migration.py  test_concurrent_declarative_source.py  test_declarative_stream.py  test_manifest_declarative_source.py  test_types.py  test_yaml_declarative_source.py
unit_tests/sources/embedded/: test_embedded_integration.py
unit_tests/sources/file_based/: helpers.py  in_memory_files_source.py  test_file_based_scenarios.py  test_file_based_stream_reader.py  test_scenarios.py  test_schema_helpers.py
unit_tests/sources/fixtures/: source_test_fixture.py
unit_tests/sources/message/: test_repository.py
unit_tests/sources/mock_server_tests/: mock_source_fixture.py  test_mock_server_abstract_source.py  test_resumable_full_refresh.py
unit_tests/sources/streams/: test_call_rate.py  test_stream_read.py  test_streams_core.py
unit_tests/sources/utils/: test_record_helper.py  test_schema_helpers.py  test_slice_logger.py  test_transform.py
unit_tests/test/: test_entrypoint_wrapper.py
unit_tests/test/mock_http/: test_matcher.py  test_mocker.py  test_request.py  test_response_builder.py
unit_tests/utils/: test_datetime_format_inferrer.py  test_datetime_helpers.py  test_mapping_helpers.py  test_message_utils.py  test_rate_limiting.py  test_schema_inferrer.py  test_secret_utils.py  test_stream_status_utils.py  test_traced_exception.py
(+260 files in other folders)
